# igdb-data-demo

./: README.md  get_nintendo_swtich_game_data.py  pyproject.toml
utils/: igdb.py
